modified some models
