# server/swagger.json
@@ -27,183 +27,19 @@
 					"isDeleted": {
 						"type": "boolean"
 					},
-					"user": {
-						"$ref": "#/components/schemas/IUser"
-					},
-					"name": {
-						"type": "string"
-					},
-					"done": {
-						"type": "boolean"
-					}
-				},
-				"required": [
-					"id",
-					"date_created",
-					"date_updated",
-					"order",
-					"isDeleted",
-					"user",
-					"name",
-					"done"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"IUser": {
-				"properties": {
-					"id": {
-						"type": "integer",
-						"format": "int32"
-					},
-					"date_created": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"date_updated": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"firstName": {
-						"type": "string"
-					},
-					"lastName": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"password": {
-						"type": "string"
-					},
-					"isDeleted": {
-						"type": "boolean"
-					},
-					"activated": {
-						"type": "boolean"
-					},
-					"folders": {
-						"items": {
-							"$ref": "#/components/schemas/IFolder"
-						},
-						"type": "array"
-					},
-					"userSessions": {
-						"items": {
-							"$ref": "#/components/schemas/IUserSession"
-						},
-						"type": "array"
-					},
-					"defaultFolder": {
-						"$ref": "#/components/schemas/Folder"
-					},
-					"defaultFolderId": {
-						"type": "number",
-						"format": "double"
-					},
-					"inbox": {
-						"$ref": "#/components/schemas/List"
-					},
-					"inboxId": {
-						"type": "number",
-						"format": "double"
-					},
-					"googleUserSub": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"id",
-					"date_created",
-					"date_updated",
-					"firstName",
-					"lastName",
-					"email",
-					"password",
-					"isDeleted",
-					"activated",
-					"folders",
-					"userSessions",
-					"defaultFolder",
-					"defaultFolderId",
-					"inbox",
-					"inboxId",
-					"googleUserSub"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"IUserSession": {
-				"properties": {
-					"id": {
-						"type": "integer",
-						"format": "int32"
-					},
-					"date_created": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"date_updated": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"user": {
-						"$ref": "#/components/schemas/IUser"
-					},
-					"isRevoked": {
-						"type": "boolean"
-					}
-				},
-				"required": [
-					"id",
-					"date_created",
-					"date_updated",
-					"user",
-					"isRevoked"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"Folder": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double",
-						"description": "Unique Identifier"
-					},
-					"date_created": {
-						"type": "string",
-						"format": "date-time",
-						"description": "Date of creation"
-					},
-					"date_updated": {
-						"type": "string",
-						"format": "date-time",
-						"description": "Date of update"
-					},
-					"name": {
-						"type": "string"
-					},
-					"done": {
-						"type": "boolean"
-					},
-					"order": {
-						"type": "number",
-						"format": "double"
-					},
-					"isDeleted": {
-						"type": "boolean"
-					},
-					"user": {
-						"$ref": "#/components/schemas/User"
-					},
 					"userId": {
 						"type": "number",
 						"format": "double"
 					},
+					"name": {
+						"type": "string"
+					},
+					"done": {
+						"type": "boolean"
+					},
 					"lists": {
 						"items": {
-							"$ref": "#/components/schemas/List"
+							"$ref": "#/components/schemas/IList"
 						},
 						"type": "array"
 					},
@@ -219,136 +55,18 @@
 					"id",
 					"date_created",
 					"date_updated",
-					"name",
-					"done",
 					"order",
 					"isDeleted",
-					"user",
 					"userId",
+					"name",
+					"done",
 					"lists",
 					"listIds"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"User": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double",
-						"description": "Unique Identifier"
-					},
-					"date_created": {
-						"type": "string",
-						"format": "date-time",
-						"description": "Date of creation"
-					},
-					"date_updated": {
-						"type": "string",
-						"format": "date-time",
-						"description": "Date of update"
-					},
-					"firstName": {
-						"type": "string"
-					},
-					"lastName": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"password": {
-						"type": "string"
-					},
-					"isDeleted": {
-						"type": "boolean"
-					},
-					"activated": {
-						"type": "boolean"
-					},
-					"googleUserSub": {
-						"type": "string"
-					},
-					"folders": {
-						"items": {
-							"$ref": "#/components/schemas/Folder"
-						},
-						"type": "array"
-					},
-					"userSessions": {
-						"items": {
-							"$ref": "#/components/schemas/UserSession"
-						},
-						"type": "array"
-					},
-					"defaultFolder": {
-						"$ref": "#/components/schemas/Folder"
-					},
-					"inbox": {
-						"$ref": "#/components/schemas/List"
-					},
-					"defaultFolderId": {
-						"type": "number",
-						"format": "double"
-					},
-					"inboxId": {
-						"type": "number",
-						"format": "double"
-					}
-				},
-				"required": [
-					"id",
-					"date_created",
-					"date_updated",
-					"firstName",
-					"lastName",
-					"email",
-					"password",
-					"isDeleted",
-					"activated",
-					"googleUserSub",
-					"folders",
-					"userSessions",
-					"defaultFolder",
-					"inbox",
-					"defaultFolderId",
-					"inboxId"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"UserSession": {
-				"properties": {
-					"id": {
-						"type": "integer",
-						"format": "int32"
-					},
-					"date_created": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"date_updated": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"user": {
-						"$ref": "#/components/schemas/User"
-					},
-					"isRevoked": {
-						"type": "boolean"
-					}
-				},
-				"required": [
-					"id",
-					"date_created",
-					"date_updated",
-					"user",
-					"isRevoked"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"List": {
+			"IList": {
 				"properties": {
 					"id": {
 						"type": "integer",
@@ -365,20 +83,14 @@
 					"name": {
 						"type": "string"
 					},
-					"user": {
-						"$ref": "#/components/schemas/User"
-					},
 					"folder": {
-						"$ref": "#/components/schemas/Folder"
+						"$ref": "#/components/schemas/IFolder"
 					},
 					"order": {
 						"type": "number",
 						"format": "double"
 					},
 					"isDeleted": {
-						"type": "boolean"
-					},
-					"done": {
 						"type": "boolean"
 					}
 				},
@@ -387,11 +99,9 @@
 					"date_created",
 					"date_updated",
 					"name",
-					"user",
 					"folder",
 					"order",
-					"isDeleted",
-					"done"
+					"isDeleted"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -673,25 +383,6 @@
 						}
 					}
 				}
-			}
-		},
-		"/user": {
-			"get": {
-				"operationId": "GetUser",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/IUser"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
 			}
 		},
 		"/user/nativeUserSignup": {
